# data-eng-course

./: .editorconfig  .pre-commit-config.yaml  mise.toml  pyproject.toml
homework1/: .gitignore  Dockerfile  compose.yaml  ingest.py  pyproject.toml
homework2/: compose.yaml  workflow.yaml
pipeline/: .gitignore  Dockerfile  compose.yaml  ingest_nytaxi.py  pipeline.py  pyproject.toml
pipeline/notebooks/: nytaxi.ipynb
