[project]
name = "data-eng-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pre-commit>=4.5.1",
]
[tool.ruff]
line-length = 99

[tool.ruff.format]
docstring-code-format = true

[tool.isort]
py_version = 310
profile = "black"
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["sshmih"]
known_third_party = ["torch"]
line_length = 99
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
